fix: changed colours of dark mode bubbles to a more subtle less distracting colour and also fixed footer problem with tags not showing up

--- a/src/FooterSection.css
+++ b/src/FooterSection.css
@@ -8,6 +8,7 @@ footer>section {
     align-items: center;
     flex-direction: column;
     gap: min(5%, 10px);
+    opacity: 0.8;
 }
 
 section.contact-me-section>div {
